--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sse-firestore-backend",
   "version": "1.0.0",
   "type": "module",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
