--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "sse-firestore-backend",
   "version": "1.0.0",
   "type": "module",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
